Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -249,6 +249,8 @@
   "muteAllNotificationsHint": "Questo gruppo è stato silenziato su tutti i dispositivi. Niente più squilli e bip provenienti da {channel} - ma si può comunque tornare in qualsiasi momento per verificare la presenza di nuovi messaggi. Se si intende lasciare il gruppo e rimuoverlo dalla barra laterale, {leaveButton}",
   "muteGroupTitle": "Silenzia questo gruppo",
   "ncdCreateGroup": "Creare un nuovo gruppo",
+  "ncdCreateRoomPeopleSearchNoMembers": "Nessun membro ancora.",
+  "_ncdCreateRoomPeopleSearchNoMembers.comment": "shown when peoplse search has 0 results because the organization has no members",
   "ncdCreateRoomPeopleSearchNotFound": "Nessun membro chiamato {searchTerm} è stato trovato.",
   "_ncdCreateRoomPeopleSearchNotFound.comment": "shown when people search in create room dialog returns 0 results",
   "ncdGroupCreateButton": "Crea un gruppo",
@@ -281,8 +283,8 @@
   "ncdInPmWithEveryPerson2": "Tutti i membri stanno già chattando con te. Resta in contatto con loro.",
   "ncdInviteToOrga": "Invita i membri a {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
-  "ncdJoinGroupHeader": "Unisciti a un gruppo esistente o creane uno nuovo. I gruppi sono meglio organizzati intorno ad un argomento.",
   "ncdJoinButDontCreateGroupHeader": "Puoi vedere tutti i gruppi a cui hai accesso. Il tuo ruolo utente non ti permette di creare gruppi.",
+  "ncdJoinGroupHeader": "Unisciti a un gruppo esistente o creane uno nuovo. I gruppi sono meglio organizzati intorno ad un argomento.",
   "ncdMemberOfEachGroup1": "Non ti perderai nessuna chiacchierata in corso!",
   "ncdMemberOfEachGroup2": "Sei già parte di ogni gruppo esistente, non c'è niente che possa essere detto pubblicamente senza il tuo avviso. Potresti voler fare delle conversazioni.",
   "ncdNoGroups1": "Sei il primo!",
@@ -351,6 +353,8 @@
   "pinnedMesages": "Messaggi appuntati",
   "pleaseUseDesktopApp": "Si prega di utilizzare la nostra {desktopApp} oppure ({download}, se non l'avete ancora installata). In alternativa può usare Grape con {browsers} per un'esperienza soddisfacente.",
   "pmIntro": "Questa è una conversazione privata tra voi e {partner}.{br}Le conversazioni private sono accessibili ai soli partecipanti.",
+  "privacyPolicy": "Politica sulla privacy",
+  "_privacyPolicy.comment": "Main org dropdown menu",
   "privateMessageHint": "(Conversazione privata)",
   "_privateMessageHint.comment": "Browser notification private message hint.",
   "productTrial": "Prova {product}",
@@ -367,10 +371,10 @@
   "reconnectSeconds": "s, oppure potete",
   "removeFromFavorites": "Rimuovi dai preferiti",
   "_removeFromFavorites.comment": "Tooltip text",
+  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "replyWithMessage": "Rispondi con un messaggio",
   "result": "Risultato",
   "_result.comment": "Title",
-  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "searchMessages": "Cerca messaggi",
   "searchSidebarTitle": "Risultati della ricerca",
   "sendInvites": "Invia e-mail di invito",
@@ -402,6 +406,8 @@
   "_tasksHeader.comment": "NLP tasks list dialog title.",
   "tasksTooltip": "Compiti",
   "_tasksTooltip.comment": "Message NLP task button tooltip.",
+  "termsOfService": "Termini di servizio",
+  "_termsOfService.comment": "Main org dropdown menu",
   "trainingModeHintWithLink": "IA: Questo sistema è in modalità di addestramento ({learnMoreLink})",
   "tryToReconnect": "Cercheremo di ricollegarci in",
   "tryingToReconnect": "Tentativo di connessione...",
