--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -249,6 +249,8 @@
   "muteAllNotificationsHint": "Este grupo está completamente silenciado en todos sus dispositivos. No hay más alertas provenientes de {channel} pero puedes comprobar en cualquier momento si hay nuevos mensajes. Si quieres dejar el grupo y quitarlo de tu barra lateral, {leaveButton}",
   "muteGroupTitle": "Silenciar este grupo",
   "ncdCreateGroup": "Crear un nuevo grupo",
+  "ncdCreateRoomPeopleSearchNoMembers": "Todavía no hay miembros.",
+  "_ncdCreateRoomPeopleSearchNoMembers.comment": "shown when peoplse search has 0 results because the organization has no members",
   "ncdCreateRoomPeopleSearchNotFound": "No se ha podido encontrar ningún miembro llamado {searchTerm}.",
   "_ncdCreateRoomPeopleSearchNotFound.comment": "shown when people search in create room dialog returns 0 results",
   "ncdGroupCreateButton": "Crear un grupo",
@@ -281,8 +283,8 @@
   "ncdInPmWithEveryPerson2": "Todos los miembros ya están chateando contigo. Mantén el contacto con ellos.",
   "ncdInviteToOrga": "Invitar a los miembros a {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
-  "ncdJoinGroupHeader": "Únete a un grupo existente o crea uno nuevo. Los grupos se organizan mejor en torno a un tema.",
   "ncdJoinButDontCreateGroupHeader": "Puedes ver todos los grupos a los que tienes acceso. Tu rol de usuario no te permite crear grupos.",
+  "ncdJoinGroupHeader": "Únete a un grupo existente o crea uno nuevo. Los grupos se organizan mejor en torno a un tema.",
   "ncdMemberOfEachGroup1": "No te perderás ninguna charla",
   "ncdMemberOfEachGroup2": "Ya formas parte de todos los grupos existentes aquí, no hay nada que se pueda decir públicamente sin tu opinión. Es posible que desees hacer conversaciones.",
   "ncdNoGroups1": "¡Eres el primero!",
@@ -351,6 +353,8 @@
   "pinnedMesages": "Mensajes Anclados",
   "pleaseUseDesktopApp": "Por favor, use nuestra {desktopApp}  ({download}, si no la ha instalado todavía). De lo contrario, puede usar Grape con {browsers} para tener una experiencia completa.",
   "pmIntro": "Esta es una conversación privada entre usted y su {partner}.{br} Las conversaciones privadas sólo son accesibles para ustedes dos.",
+  "privacyPolicy": "Política de privacidad",
+  "_privacyPolicy.comment": "Main org dropdown menu",
   "privateMessageHint": "(Conversación privada)",
   "_privateMessageHint.comment": "Browser notification private message hint.",
   "productTrial": "Evaluar {product}",
@@ -367,10 +371,10 @@
   "reconnectSeconds": "s, o puedes",
   "removeFromFavorites": "Eliminar de Favoritos",
   "_removeFromFavorites.comment": "Tooltip text",
+  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "replyWithMessage": "Responder con un mensaje",
   "result": "Resultado",
   "_result.comment": "Title",
-  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "searchMessages": "Buscar mensajes",
   "searchSidebarTitle": "Resultados de la búsqueda",
   "sendInvites": "Enviar correos electrónicos de invitación",
@@ -402,6 +406,8 @@
   "_tasksHeader.comment": "NLP tasks list dialog title.",
   "tasksTooltip": "Tareas",
   "_tasksTooltip.comment": "Message NLP task button tooltip.",
+  "termsOfService": "Condiciones de servicio",
+  "_termsOfService.comment": "Main org dropdown menu",
   "trainingModeHintWithLink": "IA: Este sistema está en modo de entrenamiento ({learnMoreLink})",
   "tryToReconnect": "Intentaremos reconectarnos en",
   "tryingToReconnect": "Tratando de reconectar..",
