Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/packages/grape-browser/i18n/translations/es.json
+++ b/packages/grape-browser/i18n/translations/es.json
@@ -3,9 +3,9 @@
   "enterKeywordPlaceholder": "Introducir una palabra clave...",
   "enterMessagePlaceholder": "Escribir un mensaje..",
   "groupPostingLimitedPlaceholder": "El envío de mensajes a este grupo ha sido limitado.",
-  "willNotifyGroup": "- notificar a todos los miembros de este grupo",
+  "willNotifyGroup": "— notificar a todos los miembros de este grupo",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- no notifica a los miembros del grupo",
+  "wontNotifyGroup": "— no notifica a los miembros del grupo",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
   "notInGroup": "no está en el grupo",
   "insertAction": "Insertar en el mensaje",
