--- a/packages/grape-browser/i18n/translations/it.json
+++ b/packages/grape-browser/i18n/translations/it.json
@@ -3,9 +3,9 @@
   "enterKeywordPlaceholder": "Inserire una parola chiave...",
   "enterMessagePlaceholder": "Inserire un messaggio...",
   "groupPostingLimitedPlaceholder": "L'invio di messaggi a questo gruppo è stato limitato.",
-  "willNotifyGroup": "- informare tutti i membri di questo gruppo",
+  "willNotifyGroup": "— informare tutti i membri di questo gruppo",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- non notificare ai membri del gruppo",
+  "wontNotifyGroup": "— non notificare ai membri del gruppo",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
   "notInGroup": "non nel gruppo",
   "insertAction": "Inserire nel messaggio",
