--- a/packages/grape-browser/i18n/translations/pl.json
+++ b/packages/grape-browser/i18n/translations/pl.json
@@ -3,9 +3,9 @@
   "enterKeywordPlaceholder": "Wpisz słowo kluczowe…",
   "enterMessagePlaceholder": "Wpisz wiadomość...",
   "groupPostingLimitedPlaceholder": "Postowania na tej grupie zostało ograniczone.",
-  "willNotifyGroup": "- powiadom wszystkich w tej grupie",
+  "willNotifyGroup": "— powiadom wszystkich w tej grupie",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- nie powiadamiaj użytkowników grupy",
+  "wontNotifyGroup": "— nie powiadamiaj użytkowników grupy",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
   "notInGroup": "niedostępne w grupie",
   "insertAction": "Wstaw do wiadomości",
