--- a/packages/grape-web-client/i18n/translations/pl.json
+++ b/packages/grape-web-client/i18n/translations/pl.json
@@ -249,7 +249,7 @@
   "muteAllNotificationsHint": "Ta grupa jest całkowicie wyciszona na wszystkich Twoich urządzeniach. Nie otrzymasz już żadnych powiadomień z {channel} - ale nadal możesz wrócić w każdej chwili, aby sprawdzić nowe wiadomości. Jeśli chcesz opuścić grupę i usunąć ją z paska bocznego - kliknij tutaj {leaveButton}",
   "muteGroupTitle": "Wycisz tą grupę",
   "ncdCreateGroup": "Utwórz nową grupę",
-  "ncdCreateRoomPeopleSearchNoMembers": "Nie ma jeszcze członków.",
+  "ncdCreateRoomPeopleSearchNoMembers": "Nie ma jeszcze użytkowników.",
   "_ncdCreateRoomPeopleSearchNoMembers.comment": "shown when peoplse search has 0 results because the organization has no members",
   "ncdCreateRoomPeopleSearchNotFound": "Nie udało się znaleźć użytkownika o nazwie {searchTerm}.",
   "_ncdCreateRoomPeopleSearchNotFound.comment": "shown when people search in create room dialog returns 0 results",
@@ -283,10 +283,10 @@
   "ncdInPmWithEveryPerson2": "Wszyscy użytkownicy już z Tobą rozmawiają. Pozostań z nimi w kontakcie.",
   "ncdInviteToOrga": "Zaproś użytkowników do {organizationName}",
   "_ncdInviteToOrga.comment": "Action link title, shown when there a no members",
-  "ncdJoinButDontCreateGroupHeader": "Widoczne są wszystkie grupy, do których masz dostęp. Twoja rola użytkownika nie pozwala na tworzenie grup.",
+  "ncdJoinButDontCreateGroupHeader": "Widzisz wszystkie grupy, do których masz dostęp. Twoja rola użytkownika nie pozwala na tworzenie grup.",
   "ncdJoinGroupHeader": "Dołącz do istniejącej grupy lub stwórz nową. Grupy najlepiej zorganizować wokół jakiegoś tematu.",
   "ncdMemberOfEachGroup1": "Nie przegapisz żadnej rozmowy!",
-  "ncdMemberOfEachGroup2": "Jesteś już częścią każdej istniejącej grupy tutaj. Otrzymasz powiadomienie o wszystkich publicznych wiadomościach. Możesz kontynuować rozmowy.",
+  "ncdMemberOfEachGroup2": "Jesteś już uczestnikiem każdej istniejącej grupy. Otrzymasz powiadomienia o wszystkich publicznych wiadomościach. Możesz kontynuować konwersacje.",
   "ncdNoGroups1": "Jesteś pierwszy!",
   "ncdNoGroups2": "Nikt jeszcze nie utworzył grupy. Nie stresuj się i stwórz pierwszą grupę na temat, który przychodzi Ci do głowy. Później możesz zaprosić do niej inne osoby.",
   "ncdPeopleSearchNoOtherPeople1": "Czujesz się tu samotny?",
