--- a/packages/grape-browser/i18n/translations/fr.json
+++ b/packages/grape-browser/i18n/translations/fr.json
@@ -3,9 +3,9 @@
   "enterKeywordPlaceholder": "Entrez un mot-clé...",
   "enterMessagePlaceholder": "Entrez un message...",
   "groupPostingLimitedPlaceholder": "L'envoi de messages à ce groupe a été limité.",
-  "willNotifyGroup": "- informer tous les membres de ce groupe",
+  "willNotifyGroup": "— informer tous les membres de ce groupe",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
-  "wontNotifyGroup": "- ne pas informer les membres du groupe",
+  "wontNotifyGroup": "— ne pas informer les membres du groupe",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
   "notInGroup": "pas en groupe",
   "insertAction": "Insérer dans le message",
