--- a/packages/grape-web-client/i18n/translations/en.json
+++ b/packages/grape-web-client/i18n/translations/en.json
@@ -186,7 +186,7 @@
   "editMessage": "Edit message",
   "email": "E-mail",
   "emailAddresses": "E-mail addresses",
-  "embedWelcomeTo": "Welcome to {channelName}",
+  "embeddedWelcomeTo": "Welcome to {channelName}",
   "emptyPinnedMessagesSidebarDescription": "Choose \"Pin message\" in the context menu of any message to make it show up here.",
   "emptyPinnedMessagesSidebarHl": "No messages have been pinned yet!",
   "enableNotifications": "Enable notifications",
