Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

--- a/packages/grape-web-client/i18n/translations/de.json
+++ b/packages/grape-web-client/i18n/translations/de.json
@@ -75,6 +75,8 @@
   "_editMessage.comment": "Message menu tooltip and dropdown.",
   "email": "E-Mail",
   "emailAddresses": "E-Mail Adressen",
+  "embeddedWelcomeToGroup": "Willkommen bei {channelName}",
+  "embeddedWelcomeToPm": "Privates Gespräch mit {partner}",
   "emptyPinnedMessagesSidebarDescription": "Wählen Sie \"Nachricht anpinnen\" im Aktionsmenü einer Nachricht aus, um diese hier anzuzeigen.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarHl": "Es wurden noch keine Nachrichten angepinnt",
@@ -368,10 +370,10 @@
   "recent": "Aktuell",
   "reconnectAlert": "Sie wurden erfolgreich wieder verbunden",
   "reconnectNow": "gleich probieren",
+  "searchMembersAndGroups": "Mitglieder und Gruppen suchen…",
   "reconnectSeconds": "s erneut, oder Sie können es",
   "removeFromFavorites": "Aus Favoriten entfernen",
   "_removeFromFavorites.comment": "Tooltip text",
-  "searchMembersAndGroups": "Mitglieder und Gruppen suchen…",
   "replyWithMessage": "Mit einer Nachricht antworten",
   "result": "Ergebnis",
   "_result.comment": "Title",
@@ -398,6 +400,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "skype": "Skype",
   "startNewConversation": "Eine neue Konversation beginnen",
+  "stillQuietHere": "Hier ist es noch ruhig. Beginnen Sie das Gespräch jetzt, indem Sie Ihre erste Nachricht senden!",
   "supportAndFaq": "Support & FAQ",
   "_supportAndFaq.comment": "Main org dropdown menu",
   "switchOrganizations": "Organisation wechseln",
