--- a/packages/grape-web-client/i18n/translations/es.json
+++ b/packages/grape-web-client/i18n/translations/es.json
@@ -75,6 +75,8 @@
   "_editMessage.comment": "Message menu tooltip and dropdown.",
   "email": "Correo electrónico",
   "emailAddresses": "Direcciones de correo electrónico",
+  "embeddedWelcomeToGroup": "Bienvenido a {channelName}",
+  "embeddedWelcomeToPm": "Conversación privada con {partner}",
   "emptyPinnedMessagesSidebarDescription": "Elija \"Anclar Mensaje\" en el menú contextual de cualquier mensaje para que aparezca aquí.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarHl": "¡No se ha anclado ningún mensaje todavía!",
@@ -368,10 +370,10 @@
   "recent": "Recientes",
   "reconnectAlert": "¡Ha sido reconectado con éxito!",
   "reconnectNow": "inténtelo ahora",
+  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "reconnectSeconds": "s, o puedes",
   "removeFromFavorites": "Eliminar de Favoritos",
   "_removeFromFavorites.comment": "Tooltip text",
-  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "replyWithMessage": "Responder con un mensaje",
   "result": "Resultado",
   "_result.comment": "Title",
@@ -398,6 +400,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "skype": "Skype",
   "startNewConversation": "Iniciar una nueva conversación",
+  "stillQuietHere": "Todavía está tranquilo aquí. Inicia la conversación ahora enviando tu primer mensaje!",
   "supportAndFaq": "Soporte y preguntas frecuentes",
   "_supportAndFaq.comment": "Main org dropdown menu",
   "switchOrganizations": "Cambiar Organización",
