--- a/packages/grape-web-client/i18n/translations/fr.json
+++ b/packages/grape-web-client/i18n/translations/fr.json
@@ -75,6 +75,8 @@
   "_editMessage.comment": "Message menu tooltip and dropdown.",
   "email": "E-mail",
   "emailAddresses": "Adresses électroniques",
+  "embeddedWelcomeToGroup": "Bienvenue à {channelName}",
+  "embeddedWelcomeToPm": "Conversation privée avec {partner}",
   "emptyPinnedMessagesSidebarDescription": "Choisissez \"Epingler un message\" dans le menu contextuel de n'importe quel message pour le faire apparaître ici.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarHl": "Aucun message n'a encore été épinglé !",
@@ -368,10 +370,10 @@
   "recent": "Récent",
   "reconnectAlert": "Vous avez été reconnectés avec succès !",
   "reconnectNow": "essayez-le maintenant",
+  "searchMembersAndGroups": "Rechercher des membres et des groupes...",
   "reconnectSeconds": "s, ou vous pouvez",
   "removeFromFavorites": "Supprimer des favoris",
   "_removeFromFavorites.comment": "Tooltip text",
-  "searchMembersAndGroups": "Rechercher des membres et des groupes...",
   "replyWithMessage": "Répondre par un message",
   "result": "Résultat",
   "_result.comment": "Title",
@@ -398,6 +400,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "skype": "Skype",
   "startNewConversation": "Créer une nouvelle conversation",
+  "stillQuietHere": "C'est encore calme ici. Commencez la conversation maintenant en envoyant votre premier message !",
   "supportAndFaq": "Assistance & FAQ",
   "_supportAndFaq.comment": "Main org dropdown menu",
   "switchOrganizations": "Changer d'organisation",
