--- a/packages/grape-web-client/i18n/translations/it.json
+++ b/packages/grape-web-client/i18n/translations/it.json
@@ -75,6 +75,8 @@
   "_editMessage.comment": "Message menu tooltip and dropdown.",
   "email": "E-mail",
   "emailAddresses": "Indirizzi e-mail",
+  "embeddedWelcomeToGroup": "Benvenuti a {channelName}",
+  "embeddedWelcomeToPm": "Conversazione privata con {partner}",
   "emptyPinnedMessagesSidebarDescription": "Scegliete \"Appunta messaggio\" nel menu contestuale di qualsiasi messaggio per farlo apparire qui.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarHl": "Nessun messaggio è stato ancora appuntato!",
@@ -368,10 +370,10 @@
   "recent": "Recente",
   "reconnectAlert": "Ricollegati con successo!",
   "reconnectNow": "prova ora",
+  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "reconnectSeconds": "s, oppure potete",
   "removeFromFavorites": "Rimuovi dai preferiti",
   "_removeFromFavorites.comment": "Tooltip text",
-  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "replyWithMessage": "Rispondi con un messaggio",
   "result": "Risultato",
   "_result.comment": "Title",
@@ -398,6 +400,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "skype": "Skype",
   "startNewConversation": "Inizia una nuova conversazione",
+  "stillQuietHere": "Qui è ancora tranquillo. Inizia la conversazione ora inviando il tuo primo messaggio!",
   "supportAndFaq": "Supporto e FAQ",
   "_supportAndFaq.comment": "Main org dropdown menu",
   "switchOrganizations": "Cambia Organizzazione",
