--- a/packages/grape-web-client/i18n/translations/pl.json
+++ b/packages/grape-web-client/i18n/translations/pl.json
@@ -75,6 +75,8 @@
   "_editMessage.comment": "Message menu tooltip and dropdown.",
   "email": "E-mail",
   "emailAddresses": "Adresy e-mail",
+  "embeddedWelcomeToGroup": "Witamy w {channelName}",
+  "embeddedWelcomeToPm": "Prywatna konwersacja z {partner}",
   "emptyPinnedMessagesSidebarDescription": "Wybierz \"Przypnij wiadomość\" w menu kontekstowym każdej wiadomości, aby wyświetlić ją tutaj.",
   "_emptyPinnedMessagesSidebarDescription.comment": "Description in the sidebar, pinned messages zero design.",
   "emptyPinnedMessagesSidebarHl": "Żadne wiadomości nie zostały jeszcze przypięte!",
@@ -368,10 +370,10 @@
   "recent": "Ostatnie",
   "reconnectAlert": "Udało Ci się ponownie połączyć!",
   "reconnectNow": "spróbuj teraz",
+  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
   "reconnectSeconds": "albo możesz",
   "removeFromFavorites": "Remove from Favorites",
   "_removeFromFavorites.comment": "Tooltip text",
-  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
   "replyWithMessage": "Odpowiedz wiadomością",
   "result": "Wynik",
   "_result.comment": "Title",
@@ -398,6 +400,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "skype": "Skype",
   "startNewConversation": "Zacznij nową rozmowę",
+  "stillQuietHere": "Tutaj jest jeszcze cicho. Rozpocznij rozmowę już teraz wysyłając swoją pierwszą wiadomość!",
   "supportAndFaq": "Wsparcie i FAQ",
   "_supportAndFaq.comment": "Main org dropdown menu",
   "switchOrganizations": "Przełącz organizacje",
