Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Stefan Kröner

--- a/packages/grape-browser/i18n/translations/de.json
+++ b/packages/grape-browser/i18n/translations/de.json
@@ -3,7 +3,7 @@
   "enterKeywordPlaceholder": "Stichwort eingeben…",
   "enterMessagePlaceholder": "Nachricht eingeben...",
   "groupPostingLimitedPlaceholder": "Posten in diese Gruppe wurde eingeschränkt.",
-  "willNotifyGroup": "— jeden in dieser Gruppe benachrichtigen",
+  "willNotifyGroup": "— jede in dieser Gruppe benachrichtigen",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
   "wontNotifyGroup": "— Benachrichtigt keine Gruppenmitglieder",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
@@ -17,7 +17,7 @@
   "resultsAmountHint": "{amount} Ergebnisse",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Keine Ergebnisse.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} andere{{resultsAmountResults}}}",
   "resultsAmountResult": "Ergebnis",
   "resultsAmountResults": "Ergebnisse",
   "serviesHeadline": "Service auswählen",
