--- a/packages/grape-web-client/i18n/translations/de.json
+++ b/packages/grape-web-client/i18n/translations/de.json
@@ -290,11 +290,21 @@
   "ncdMemberOfEachGroup1": "Sie verpassen nichts.",
   "ncdMemberOfEachGroup2": "Sie sind bereits Mitglied in jeder Gruppe. Ihnen entgeht nichts, was öffentlich gesagt wird. Halten Sie die Gespräche am Laufen!",
   "ncdNoGroups1": "Sie sind die / der Erste!",
+  "_ncdNoGroups1.comment": "shown when there are no groups in the organisation",
   "ncdNoGroups2": "Es hat noch niemand eine Gruppe erstellt. Erstellen Sie doch einfach eine Gruppe rund um irgendein Thema, das Ihnen einfällt. Sie können später noch Personen einladen.",
+  "_ncdNoGroups2.comment": "shown when there are no groups in the organisation",
+  "ncdNoGroupsGuest1": "Sie sind nicht Teil einer Gruppe!",
+  "_ncdNoGroupsGuest1.comment": "shown for guest user when there are no groups in the organisation",
+  "ncdNoGroupsGuest2": "Es scheint, dass Sie noch keinen Zugriff auf Gruppen haben und Ihre Benutzerrolle erlaubt es Ihnen nicht, neue Gruppen zu erstellen. Bitte warten Sie, bis Sie zu einer Gruppe hinzugefügt werden.",
+  "_ncdNoGroupsGuest2.comment": "shown for guest user when there are no groups in the organisation",
   "ncdPeopleSearchNoOtherPeople1": "Einsam?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNoOtherPeople2": "Anscheined sind in {organizationName} noch keine anderen Mitglieder. Laden Sie doch jemanden ein - sobald wer beitritt, können Sie hier ein Konversation starten. ",
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest1": "Sie sind nicht Teil einer Gruppe!",
+  "_ncdPeopleSearchNoOtherPeopleGuest1.comment": "shown for guest user when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest2": "Das bedeutet auch, dass es noch niemanden gibt, mit dem Sie chatten können. Bitte warten Sie, bis Sie zu einer Gruppe hinzugefügt werden, und Sie werden sehen, dass hier Leute auftauchen.",
+  "_ncdPeopleSearchNoOtherPeopleGuest2.comment": "shown for guest user when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Schöner Name, aber leider konnte niemand in {orgName} gefunden werden.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
   "ncdPeopleSeparator": "Personen, mit denen Sie bereits ein Gespräch führen",
@@ -365,12 +375,12 @@
   "quoteMessage": "Zitieren",
   "read": "Gelesen",
   "_read.comment": "message delivery status in tooltip",
+  "searchMembersAndGroups": "Mitglieder und Gruppen suchen…",
   "recalculateScrollPosition": "Scrollposition wird neu berechnet…",
   "_recalculateScrollPosition.comment": "Message showing when the user resizes the browser window.",
   "recent": "Aktuell",
   "reconnectAlert": "Sie wurden erfolgreich wieder verbunden",
   "reconnectNow": "gleich probieren",
-  "searchMembersAndGroups": "Mitglieder und Gruppen suchen…",
   "reconnectSeconds": "s erneut, oder Sie können es",
   "removeFromFavorites": "Aus Favoriten entfernen",
   "_removeFromFavorites.comment": "Tooltip text",
