--- a/packages/grape-web-client/i18n/translations/es.json
+++ b/packages/grape-web-client/i18n/translations/es.json
@@ -290,11 +290,21 @@
   "ncdMemberOfEachGroup1": "No te perderás ninguna charla",
   "ncdMemberOfEachGroup2": "Ya formas parte de todos los grupos existentes aquí, no hay nada que se pueda decir públicamente sin tu opinión. Es posible que desees hacer conversaciones.",
   "ncdNoGroups1": "¡Eres el primero!",
+  "_ncdNoGroups1.comment": "shown when there are no groups in the organisation",
   "ncdNoGroups2": "Nadie más ha creado un grupo todavía. No te agobies y crea el primer grupo en torno a un tema que se te ocurra. Más adelante podrás invitar a otras personas a este grupo.",
+  "_ncdNoGroups2.comment": "shown when there are no groups in the organisation",
+  "ncdNoGroupsGuest1": "Usted no forma parte de ningún grupo",
+  "_ncdNoGroupsGuest1.comment": "shown for guest user when there are no groups in the organisation",
+  "ncdNoGroupsGuest2": "Parece que aún no tienes acceso a ningún grupo y tu rol de usuario no te permite crear nuevos. Por favor, espera hasta que se te añada a un grupo.",
+  "_ncdNoGroupsGuest2.comment": "shown for guest user when there are no groups in the organisation",
   "ncdPeopleSearchNoOtherPeople1": "¿Te sientes solo aquí?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNoOtherPeople2": "Parece que {organizationName} aún no tiene más miembros que tú, así que ¿por qué no invitar a alguien? Tan pronto como se unan, puedes volver e iniciar una conversación.",
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest1": "Usted no forma parte de ningún grupo",
+  "_ncdPeopleSearchNoOtherPeopleGuest1.comment": "shown for guest user when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest2": "Eso significa que tampoco hay nadie con quien puedas chatear todavía. Por favor, espera a que te agreguen a un grupo y verás que la gente aparece aquí.",
+  "_ncdPeopleSearchNoOtherPeopleGuest2.comment": "shown for guest user when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Bonito nombre, pero desgraciadamente no se ha podido encontrar a nadie en {orgName}.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
   "ncdPeopleSeparator": "Personas con las que ya tienes una conversación",
@@ -365,12 +375,12 @@
   "quoteMessage": "Citar il mensaje",
   "read": "Leído",
   "_read.comment": "message delivery status in tooltip",
+  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "recalculateScrollPosition": "Recalculando la posición del desplazamiento...",
   "_recalculateScrollPosition.comment": "Message showing when the user resizes the browser window.",
   "recent": "Recientes",
   "reconnectAlert": "¡Ha sido reconectado con éxito!",
   "reconnectNow": "inténtelo ahora",
-  "searchMembersAndGroups": "Buscar miembros y grupos...",
   "reconnectSeconds": "s, o puedes",
   "removeFromFavorites": "Eliminar de Favoritos",
   "_removeFromFavorites.comment": "Tooltip text",
