--- a/packages/grape-web-client/i18n/translations/pl.json
+++ b/packages/grape-web-client/i18n/translations/pl.json
@@ -290,11 +290,21 @@
   "ncdMemberOfEachGroup1": "Nie przegapisz żadnej rozmowy!",
   "ncdMemberOfEachGroup2": "Jesteś już uczestnikiem każdej istniejącej grupy. Otrzymasz powiadomienia o wszystkich publicznych wiadomościach. Możesz kontynuować konwersacje.",
   "ncdNoGroups1": "Jesteś pierwszy!",
+  "_ncdNoGroups1.comment": "shown when there are no groups in the organisation",
   "ncdNoGroups2": "Nikt jeszcze nie utworzył grupy. Nie stresuj się i stwórz pierwszą grupę na temat, który przychodzi Ci do głowy. Później możesz zaprosić do niej inne osoby.",
+  "_ncdNoGroups2.comment": "shown when there are no groups in the organisation",
+  "ncdNoGroupsGuest1": "Nie jesteś częścią żadnej grupy!",
+  "_ncdNoGroupsGuest1.comment": "shown for guest user when there are no groups in the organisation",
+  "ncdNoGroupsGuest2": "Wygląda na to, że nie masz jeszcze dostępu do żadnej grupy, a Twoja rola użytkownika nie pozwala na tworzenie nowych grup. Proszę poczekać, aż zostaniesz dodany do grupy.",
+  "_ncdNoGroupsGuest2.comment": "shown for guest user when there are no groups in the organisation",
   "ncdPeopleSearchNoOtherPeople1": "Czujesz się tu samotny?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNoOtherPeople2": "Wygląda na to, że {organizationName} nie ma jeszcze innych użytkowników niż Ty, więc dlaczego by nie zaprosić kogoś? Jak tylko ktoś taki dołączy, możesz wrócić i rozpocząć rozmowę.",
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest1": "Nie jesteś częścią żadnej grupy!",
+  "_ncdPeopleSearchNoOtherPeopleGuest1.comment": "shown for guest user when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest2": "Oznacza to, że nie ma jeszcze nikogo, z kim mógłbyś porozmawiać. Poczekaj, aż zostaniesz dodany do grupy, a zobaczysz pojawiających się tutaj ludzi.",
+  "_ncdPeopleSearchNoOtherPeopleGuest2.comment": "shown for guest user when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Ładna nazwa, ale niestety nie udało się znaleźć nikogo w {orgName}.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
   "ncdPeopleSeparator": "Ludzie, z którymi już rozmawiasz",
@@ -365,12 +375,12 @@
   "quoteMessage": "Cytuj wiadomość",
   "read": "Przeczytaj",
   "_read.comment": "message delivery status in tooltip",
+  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
   "recalculateScrollPosition": "Ponowne obliczenie pozycji przewijania…",
   "_recalculateScrollPosition.comment": "Message showing when the user resizes the browser window.",
   "recent": "Ostatnie",
   "reconnectAlert": "Udało Ci się ponownie połączyć!",
   "reconnectNow": "spróbuj teraz",
-  "searchMembersAndGroups": "Szukaj użytkownika lub grupy…",
   "reconnectSeconds": "albo możesz",
   "removeFromFavorites": "Remove from Favorites",
   "_removeFromFavorites.comment": "Tooltip text",
