--- a/packages/grape-web-client/i18n/translations/it.json
+++ b/packages/grape-web-client/i18n/translations/it.json
@@ -290,11 +290,21 @@
   "ncdMemberOfEachGroup1": "Non ti perderai nessuna chiacchierata in corso!",
   "ncdMemberOfEachGroup2": "Sei già parte di ogni gruppo esistente, non c'è niente che possa essere detto pubblicamente senza il tuo avviso. Potresti voler fare delle conversazioni.",
   "ncdNoGroups1": "Sei il primo!",
+  "_ncdNoGroups1.comment": "shown when there are no groups in the organisation",
   "ncdNoGroups2": "Nessun altro ha ancora creato un gruppo. Non essere troppo stressato e crea semplicemente il primo gruppo su un argomento che ti viene in mente. Puoi invitare altre persone a questo gruppo più tardi.",
+  "_ncdNoGroups2.comment": "shown when there are no groups in the organisation",
+  "ncdNoGroupsGuest1": "Tu non fai parte di nessun gruppo!",
+  "_ncdNoGroupsGuest1.comment": "shown for guest user when there are no groups in the organisation",
+  "ncdNoGroupsGuest2": "Sembra che tu non abbia ancora accesso a nessun gruppo e il tuo ruolo utente non ti permette di crearne di nuovi. Per favore aspetta di essere aggiunto ad un gruppo.",
+  "_ncdNoGroupsGuest2.comment": "shown for guest user when there are no groups in the organisation",
   "ncdPeopleSearchNoOtherPeople1": "Ti senti solo qui?",
   "_ncdPeopleSearchNoOtherPeople1.comment": "shown when there are no people in the organisation",
   "ncdPeopleSearchNoOtherPeople2": "Sembra che {organizationName} non abbia ancora nessun altro membro oltre a te, quindi perché non invitare qualcuno? Non appena si uniscono, puoi tornare e iniziare una conversazione.",
   "_ncdPeopleSearchNoOtherPeople2.comment": "shown when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest1": "Tu non fai parte di nessun gruppo!",
+  "_ncdPeopleSearchNoOtherPeopleGuest1.comment": "shown for guest user when there are no people in the organisation",
+  "ncdPeopleSearchNoOtherPeopleGuest2": "Questo significa che non c'è ancora nessuno con cui puoi chattare. Per favore, aspetta di essere aggiunto ad un gruppo e vedrai le persone apparire qui.",
+  "_ncdPeopleSearchNoOtherPeopleGuest2.comment": "shown for guest user when there are no people in the organisation",
   "ncdPeopleSearchNotFound": "Bel nome, ma purtroppo non è stato possibile trovare nessuno in {orgName}.",
   "_ncdPeopleSearchNotFound.comment": "shown when people search returns 0 results",
   "ncdPeopleSeparator": "Persone con cui hai già una conversazione",
@@ -365,12 +375,12 @@
   "quoteMessage": "Cita il messaggio",
   "read": "Letto",
   "_read.comment": "message delivery status in tooltip",
+  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "recalculateScrollPosition": "Ricalcolo della posizione di scorrimento..",
   "_recalculateScrollPosition.comment": "Message showing when the user resizes the browser window.",
   "recent": "Recente",
   "reconnectAlert": "Ricollegati con successo!",
   "reconnectNow": "prova ora",
-  "searchMembersAndGroups": "Cerca membri e gruppi..",
   "reconnectSeconds": "s, oppure potete",
   "removeFromFavorites": "Rimuovi dai preferiti",
   "_removeFromFavorites.comment": "Tooltip text",
