Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Stefan Kröner

--- a/packages/grape-browser/i18n/translations/de.json
+++ b/packages/grape-browser/i18n/translations/de.json
@@ -17,7 +17,7 @@
   "resultsAmountHint": "{amount} Ergebnisse",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Keine Ergebnisse.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} andere{{resultsAmountResults}}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
   "resultsAmountResult": "Ergebnis",
   "resultsAmountResults": "Ergebnisse",
   "serviesHeadline": "Service auswählen",
